--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,15 @@
 FROM node:20
 
-# Set working directory
 WORKDIR /app
 
-# Copy package.json and install deps first (better caching)
 COPY package*.json ./
-RUN npm install vite && npm install
 
-# Copy remaining source files
+RUN rm -rf node_modules package-lock.json
+
+RUN npm install --force
+
 COPY . .
 
-# Expose Vite dev server port
 EXPOSE 5173
 
-# Start Vite dev server
 CMD ["npm", "run", "dev"]
