--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-DB_CONNECTION=
+DB_CONNECTION=pgsql
 DB_HOST=db
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
+DB_PORT=5432
+DB_DATABASE=backend
+DB_USERNAME=root
 DB_PASSWORD=
-VITE_API_BASE_URL=
+VITE_API_BASE_URL=http://localhost:8000
